# RSerialDebugAssistant

./: .gitignore  ANALYSIS_PLAN.md  LICENSE  README.md  README.zh-CN.md  version.json
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: ConfigPanel.tsx  LogViewer.tsx  PortSelector.tsx  QuickCommandPanel.tsx  SendPanel.tsx  SettingsModal.tsx  StatusBar.tsx  ToggleSwitch.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  dialog.tsx  sonner.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/i18n/: LanguageContext.tsx  index.ts  useTranslation.ts
frontend/src/i18n/translations/: en.json  zh-CN.json
frontend/src/utils/: checksum.ts  encoding.ts  timezone.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  serial_manager.rs  types.rs  updater.rs
