[package]
name = "serial-debug-assistant"
version = "1.3.1"
description = "Cross-platform serial debugging assistant"
authors = ["Gyanano"]
license = "MIT"
repository = "https://github.com/Gyanano/RSerialDebugAssistant"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
serialport = "4.4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
encoding_rs = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
